spacing fixed with frames

--- a/GymDiaryCodeFirst/Content/dashboard.css
+++ b/GymDiaryCodeFirst/Content/dashboard.css
@@ -1,4 +1,4 @@
-﻿#dashboard{
+﻿#dashboard-title{
     text-align: center;
     vertical-align:middle;
     padding:3%;
@@ -20,4 +20,10 @@
     border-color:black;
     border:solid;
     border-width:2px 0px 0px 0px;
+}
+#frame-container{
+    width:100%;
+    text-align: center;
+    vertical-align:middle;
+
 }
